@@ -1,4 +1,5 @@
 # Version 0.4.3
+- Using QGraphicsScene instead of VMainGraphicsScene caused a crash.
 - Fixed bug disabling tool True darts.
 - Fixed wrong calculation tool True darts.
 - [#405] Fixed crash after deleting first pattern piece in the list.
